added card secttion and responsive

--- a/index.html
+++ b/index.html
@@ -21,16 +21,114 @@
         </nav>
         <section class="header-width">
             <div class="architect-content-width text-aline">
-                <h1  class="color-dark01 architect-title">Brand New <br>Group of Architects
+                <h1 class="color-dark01 architect-title">Brand New <br>Group of Architects
                 </h1>
-                <p class="color-dark03 architect-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="color-dark03 architect-description">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
                 <button class="primary-btn">Explore More</button>
             </div>
             <img class="banner-img" src="images/banner.png" alt="">
         </section>
     </header>
-    <main>
-        
+    <main class="main-width">
+
+        <!-- features start -->
+        <section class="features display-flex">
+            <div class="features-grid-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features-content">
+                <h1 class="section-title"><span class="quick color-dark03">Quick list</span> of Our <span
+                        id="features">Features</span></h1>
+                <p class="section-description color-dark03">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+
+        <!-- experience start -->
+        <section class="experience hide">
+            <div class="experience-container display-flex">
+                <div class="experience-content">
+                    <h3 class="experience-title color-dark01">Features you will<br> love & enjoy</h3>
+                    <p class="experience-description color-dark03">There are many variations of passages of Lorem Ipsum
+                        available, but the majority have suffered alteration in some form, by injected humour, or
+                        randomised words which don't look even</p>
+                    <div class="card-one">
+                        <h5 class="experience-card color-dark01">Dexktop & Mobile Version</h5>
+                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                            Ipsum available, but the majority have suffered alteration in some form, by injected humour,
+                            or randomised...........</p>
+                    </div>
+                    <div class="card-one">
+                        <h5 class="experience-card color-dark01">Drag & Drop Builder</h5>
+                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                            Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="card-one">
+                        <h5 class="experience-card color-dark01">Awesome Modern Design</h5>
+                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                            Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="card-one">
+                        <h5 class="experience-card color-dark01">Super Easy to Edit</h5>
+                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                            Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                </div>
+                <div class="expeience-img">
+                    <img src="images/architect.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- some facts start -->
+        <section class="facts-section">
+            <h1 class="section-title facts-title color-dark01">Some Facts</h1>
+            <p class="section-description fact-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="facts-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="facts-icon">
+                        <h4 class="facts-number">54</h4>
+                        <h5 class="facts-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="facts-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="facts-icon">
+                        <h4 class="facts-number">1458</h4>
+                        <h5 class="facts-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="facts-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="facts-icon">
+                        <h4 class="facts-number">590</h4>
+                        <h5 class="facts-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="facts-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="facts-icon">
+                        <h4 class="facts-number">22578</h4>
+                        <h5 class="facts-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
