--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 
         <!-- some facts start -->
         <section class="facts-section">
-            <h1 class="section-title facts-title color-dark01">Some Facts</h1>
-            <p class="section-description fact-description">There are many variations of passages of Lorem Ipsum available, but the
+            <h1 class="section-title facts-aline color-dark01">Some Facts</h1>
+            <p class="section-description fact-description">There are many variations of passages of Lorem Ipsum
+                available, but the
                 majority have suffered alteration.</p>
             <div class="facts-container">
                 <div class="facts-card display-flex">
@@ -129,9 +130,26 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- our sponspors start -->
+        <section class="spons">
+            <div class="spons-container">
+                <h1 class="section-title">Our Sponspors</h1>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="spons-icon">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img class="figma" src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+    </main>
+    <!-- footer start -->
+    <footer class="main-width">
+        <p class="text-aline background-color padding">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
