--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
 
         <!-- experience start -->
-        <section class="experience hide">
+        <section class="experience">
             <div class="experience-container display-flex">
                 <div class="experience-content">
                     <h3 class="experience-title color-dark01">Features you will<br> love & enjoy</h3>
@@ -61,27 +61,31 @@
                         randomised words which don't look even</p>
                     <div class="card-one">
                         <h5 class="experience-card color-dark01">Dexktop & Mobile Version</h5>
-                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                        <p class="experience-description color-dark03 experience1">There are many variations of passages
+                            of Lorem
                             Ipsum available, but the majority have suffered alteration in some form, by injected humour,
                             or randomised...........</p>
                     </div>
                     <div class="card-one">
                         <h5 class="experience-card color-dark01">Drag & Drop Builder</h5>
-                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                        <p class="experience-description color-dark03 experience1">There are many variations of passages
+                            of Lorem
                             Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour, or
                             randomised...........</p>
                     </div>
                     <div class="card-one">
                         <h5 class="experience-card color-dark01">Awesome Modern Design</h5>
-                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                        <p class="experience-description color-dark03 experience1">There are many variations of passages
+                            of Lorem
                             Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour, or
                             randomised...........</p>
                     </div>
                     <div class="card-one">
-                        <h5 class="experience-card color-dark01">Super Easy to Edit</h5>
-                        <p class="experience-description color-dark03">There are many variations of passages of Lorem
+                        <h5 class="experience-card color-dark01 ">Super Easy to Edit</h5>
+                        <p class="experience-description color-dark03 experience1">There are many variations of passages
+                            of Lorem
                             Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour, or
                             randomised...........</p>
@@ -89,6 +93,11 @@
                 </div>
                 <div class="expeience-img">
                     <img src="images/architect.png" alt="">
+                    <button class="primary-btn yearexperience">
+                        <span class="year">10+Year</span>
+                        <br>
+                        <span class="year-ex">Experience</span>
+                    </button>
                 </div>
             </div>
         </section>
@@ -149,7 +158,8 @@
     </main>
     <!-- footer start -->
     <footer class="main-width">
-        <p class="text-aline background-color padding">All rights reserved copyright@2023 startup landing page design</p>
+        <p class="text-aline background-color padding">All rights reserved copyright@2023 startup landing page design
+        </p>
     </footer>
 </body>
 
